--- a/client/views/static/rules.html
+++ b/client/views/static/rules.html
@@ -1,43 +1,63 @@
 <template name="rules">
-  <div class="col-md-12 col-lg-offset-1 col-lg-10">
-
-    <div class="page-header">
-      <h1>Rules</h1>
-    </div>
-    The contestants are challenged with problems that will in most cases require programming to solve.
-    They are free to select any platform or language that they see fit to solve the problems at hand.
-    Depending on how well they solve the problem, they'll gain
-    a set amount of points which are recorded on the ladder.
-    The contestants will battle with each other for the glory and fame of being on or near the top of the ladder.
-
-    <h3>Ruling</h3>
-    When an answer is submitted, it will be sanitized before compared against the correct answer. Please take note of the problem's description
-    for any special format your answer should adhere to to make sure so the system is able to determine the correctness of your answer.
-
-    <h3>Cheating</h3>
-
-    <p>While it is not against the rules to cooperate in solving the problems, contestants should submit their solutions individually.</p>
-
-    <h3>Scoring</h3>
-
+<div class="col-md-10 col-lg-offset-2 col-lg-6">
+    <h2>Om konkurransen</h2>
     <p>
-      Upon submitting an answer to a problem, the contestant's answer will be compared against the correct answer on the server.
-      If a correct solution is submitted, the contestant will be rewarded 10 points. If the answer is not correct one the solution will be rejected.
+    Et lag består av inntil tre deltagere, disse trenger ikke være studenter
+    ved UiO. Hvert lag kan bruke så mange maskiner de selv vil, og det er
+    anledning til å bruke egen datamaskin.
     </p>
 
     <p>
-      A contestant may choose to resubmit corrected solutions, but will be deducted 1 point per failed try.
+    Oppgavesettet består av 10-15 oppgaver. Hver oppgave løses ved å fylle inn
+    et input-felt på en nettside deltagerne får tilgang til under konkurransen.
+    Alle oppgavene egner seg for å løses med programmering, men mange oppgaver
+    kan også løses analytisk.
     </p>
 
-    <p><em>
-      <strong>For example:</strong> Ola submits an answer to a problem. He has previously submitted two incorrect answers.
-      Ola's new submission is correct, so he will be rewared
-      <strong>8 points</strong> (<strong>10 points</strong> for a correct soltuion
-      <strong>- 2 points</strong> because of the 2 failed tries).
-    </em></p>
+    <h2>Rangering</h2>
+    <p>
+    Hvert lag gis 10 poeng for hver løste oppgave. For hvert feilsvar reduseres
+    potten på den gitte oppgaven med 2 poeng. Man får alltid minst 2 poeng for
+    løst oppgave, uansett hvor mange feilleveringer man har.
+    </p>
 
     <p>
-      The minimum amount of points rewarded is 2. If your score deduction would lead you to receive less than 2 points, it will be adjusted up to 2 points.
+    Vinneren er det laget som har flest poeng ved konkurransetidens utløp.
     </p>
-  </div>
+
+    <h2>Hjelpemidler</h2>
+    <p>
+    I utgangspunktet er alle hjelpemidler tillatt, men det er generelt ikke lov
+    å diskutere oppgavene med personer utenfor laget.
+    </p>
+
+    <p>
+    Eksempler på ting som ikke er lov:
+
+    <ul>
+        <li>Diskutere oppgavene med personer utenfor laget</li>
+        <li>Stille spørsmål på Stack Overflow</li>
+        <li>Online chat med geeks</li>
+        <li>Diskutere oppgaver med deltagere fra andre lag</li>
+    </ul>
+    </p>
+
+    <p>
+    Eksempler på ting som er lov:
+
+    <ul>
+        <li>Google etter løsninger</li>
+        <li>Bruke kode fra Stack Overflow</li>
+        <li>Løse likninger med Wolfram Alpha</li>
+        <li>Bruke kode man selv eller andre har skrevet tidligere</li>
+        <li>Bruke ferdiglaget editor config</li>
+        <li>Surfe på nettet/sende meldinger/ringe med mobil/tablet, så lenge det
+        ikke bryter med ovenstående regler</li>
+    </ul>
+    </p>
+
+    <p>
+    Vi legger ikke opp til et veldig strengt regime, men oppfordrer til å utvise god sportsånd.
+    </p>
+</div>
 </template>
