--- a/client/less/programming-ladder.import.less
+++ b/client/less/programming-ladder.import.less
@@ -3,7 +3,7 @@ html {
   min-height: 100%;
 }
 
-@footer-height: 110px;
+@footer-height: 125px;
 @green:                 #5B9836;
 
 body {
@@ -21,7 +21,8 @@ body > footer {
   text-align: center;
   border-top: 1px solid #e5e5e5;
   padding: 20px 0;
-    color: #fff;
+    background-color: #fff;
+    color: @green;
 
   position: absolute;
   bottom: 0;
