--- a/client/views/common/footer.html
+++ b/client/views/common/footer.html
@@ -4,6 +4,7 @@
       <p>Handcrafted with ♥</p>
       <p>Powered by beer and <a href="https://www.meteor.com/">Meteor</a>.</p>
       <p>Designed and built by a <a href="http://beta.knowitlabs.no/">Knowit Labs</a> team.</p>
+      <p>Shamelessly copied by <a href="http://maps-uio.no/">MAPS</a>.</p>
     </div>
   </footer>
 </template>
