--- a/client/lib/themes/metro-variables.import.less
+++ b/client/lib/themes/metro-variables.import.less
@@ -32,7 +32,7 @@
 @text-color:            @white;
 
 //** Global textual link color.
-@link-color:            @brand-primary;
+@link-color:            @green;
 //** Link hover color set via `darken()` function.
 @link-hover-color:      darken(@link-color, 15%);
 
